ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myesi-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
      - myesi.local
    secretName: myesi-tls
  rules:
  - host: myesi.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myesi-service   
            port:
              number: 80
